--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContactController!{% endblock %}
+{% block title %}Contact us!{% endblock %}
 
 {% block body %}
     <section class="vh-90 mt-3 mb-3" style="background-color: #4A4A4A;">
@@ -16,8 +16,8 @@
                                     <p class="text-center h4 fw-bold mb-5 mx-1 mx-md-4 mt-4">We love hearing from you!</p>
                                     <p class="text-center mb-5 mx-1 mx-md-4 mt-4"> If you have any questions, suggestions, or just need a buddy to talk to, contact us with the form below!</p>
 
-                                    <form class="mx-1 mx-md-4">
-
+                                    <div class="mx-1 mx-md-4">
+                                        {{ form_start(contact) }}
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
@@ -33,14 +33,14 @@
                                         </div>
 
                                         <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                            <i class="fas fa-at fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 {{ form_row(contact.subject) }}
                                             </div>
                                         </div>
 
                                         <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                                            <i class="fas fa-message fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 {{ form_row(contact.message) }}
                                             </div>
@@ -48,8 +48,9 @@
 
                                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                                             {{ form_row(contact.send) }}
+                                            {{ form_end(contact) }}
                                         </div>
-                                    </form>
+                                    </div>
                                 </div>
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 
