--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -4,27 +4,27 @@
         <!-- Section: Social media -->
         <section class="mb-4">
             <!-- Facebook -->
-            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="#!" role="button"
+            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="https://www.facebook.com/tomas.spit" role="button"
             ><i class="fab fa-facebook-f"></i
                 ></a>
 
             <!-- Google -->
-            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="#!" role="button"
+            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="mailto:Tomas.p.spit@gmail.com" role="button"
             ><i class="fab fa-google"></i
                 ></a>
 
-            <!-- Instagram -->
+            <!-- Personal Website -->
             <a class="footer-link social btn btn-outline-light btn-floating m-2" href="#!" role="button"
-            ><i class="fab fa-instagram"></i
+            ><i class="fab fa-at"></i
                 ></a>
 
             <!-- Linkedin -->
-            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="#!" role="button"
+            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="https://www.linkedin.com/in/tomasspit/" role="button"
             ><i class="fab fa-linkedin-in"></i
                 ></a>
 
             <!-- Github -->
-            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="#!" role="button"
+            <a class="footer-link social btn btn-outline-light btn-floating m-2" href="https://github.com/Tomasspit2" role="button"
             ><i class="fab fa-github"></i
                 ></a>
         </section>
