--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="d-flex justify-content-center mb-5">
-        <img  src="/assets/images/logos/Logo-T-Store-Square.png" width="100%" height="800px" alt="">
+        <img  src="/assets/images/logos/Logo-T-Store-Square.png" width="100%" height="800px" style="object-fit: cover;" alt="">
     </div>
     
     <div class="row row-cols-1 row-cols-md-4 g-4" style="margin-right: 0!important; padding-left: 10px;">
@@ -13,13 +13,13 @@
 
             <div class="col">
                 <div class="card h-100" style="background-color: #ffeada!important; color: #4A4A4A!important;">
-                    <img src="{{ article.image_url }}" class="card-img-top" style="height: 300px; width: 100%" alt="{{ article.title }}">
+                    <img src="{{ article.image_url }}" class="card-img-top" style="height: 300px; width: 100%; object-fit: cover;" alt="{{ article.title }}">
                     <div class="card-body">
                         <a href="/show/{{ article.slug }}"><h5 class="card-title">{{ article.title }}</h5>
                             {% if article.author.profile is defined %}
-                            <p class="card-text"><img src="{{ article.author.profile.picture }}" height="50" width="50" style="border-radius: 100px; border: 1px solid rgba(29,29,29,0.04); margin-right: 10px;" alt="">{{ article.author.fullName }}</p>
+                            <p class="card-text"><img src="{{ article.author.profile.picture }}" height="50" width="50" style="object-fit: cover; border-radius: 100px; border: 1px solid rgba(29,29,29,0.04); margin-right: 10px;" alt="">{{ article.author.fullName }}</p>
                             {% else %}
-                            <p class="card-text"><img src="/assets/images/Profile/defaultProfilePicture.jfif" height="50" width="50" style="border-radius: 100px; border: 1px solid rgba(29,29,29,0.04); margin-right: 10px;" alt="">{{ article.author.fullName }}</p>
+                            <p class="card-text"><img src="/assets/images/Profile/defaultProfilePicture.jfif" height="50" width="50" style="object-fit: cover; border-radius: 100px; border: 1px solid rgba(29,29,29,0.04); margin-right: 10px;" alt="">{{ article.author.fullName }}</p>
                             {% endif %}
                             <p class="card-text"><small>Created {{ article.fromNow }}. </small></p>
                             <p class="card-text">{{ article.description }}</p></a> <br>
